fix:scrollbar

--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -44,14 +44,15 @@
         width: @w;
         height: @w;
     }
-    &::-webkit-scrollbar-track,
     &::-webkit-scrollbar-track-piece {
-        background-color: #fafafa;
+        background-color: hsla(0, 0%, 87%, 0.2);
         border-radius: 6px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
     }
     &::-webkit-scrollbar-thumb {
-        background-color: #eee;
+        background-color: #0003;
         border-radius: 6px;
+        transition: all 0.2s ease-in-out;
     }
     &::-webkit-scrollbar-button,
     &::-webkit-scrollbar-corner,
